# DBS-AI-Chatbot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_project_structure.py
api_gateway/: __init__.py  gateway.py  middleware.py
config/: __init__.py  settings.py
frontend/: index.html
knowledge_base/: __init__.py  embeddings.py  rag_engine.py  vector_store.py
llm_core/: __init__.py  mistral_client.py  prompts.py
orchestration/: __init__.py  conversation_manager.py  intent_router.py  response_generator.py
security/: __init__.py  audit_logger.py  auth_service.py  fraud_detector.py
transaction_engine/: __init__.py  core_banking_client.py  validators.py  workflow_engine.py
