[project]
name = "dbs-ai-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.1.2",
    "chromadb==0.4.22",
    "fastapi==0.109.0",
    "httpx>=0.25.2,<0.26.0",
    "langchain==0.1.0",
    "langchain-community==0.0.13",
    "mistralai==0.0.11",
    "openai==1.10.0",
    "pandas>=2.3.3",
    "passlib==1.7.4",
    "prometheus-client==0.19.0",
    "pydantic-settings>=2.12.0",
    "pyjwt==2.8.0",
    "pypdf==4.0.1",
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "python-docx==1.1.0",
    "python-jose[cryptography]==3.3.0",
    "python-json-logger==2.0.7",
    "python-multipart==0.0.6",
    "redis==5.0.1",
    "requests==2.31.0",
    "scipy>=1.16.3",
    "sentence-transformers==2.3.1",
    "uvicorn[standard]==0.27.0",
]
